# conestoga

./: .env.example  .gitignore  GEMINI.md  GEMINI3_VERIFICATION.md  Makefile  PERFORMANCE.md  README.md  REQUIREMENT10_VERIFICATION.md  UI_DESIGN.md  design.md  docker-compose.test.yml  generate_map.py  list_models.py  package.json  pyproject.toml  requirements.md  research.md  spec.json  test_gemini_live.py  test_map_image.py  test_prefetch.py  test_quota_handling.py
.codex/skills/conestoga-sdd-ontology/: SKILL.md
.gemini/commands/kiro/: spec-design.toml  spec-requirements.toml  spec-tasks.toml  steering.toml  validate-design.toml  validate-gap.toml  validate-impl.toml
.github/workflows/: ci.yml
.kiro/specs/ci-cd-pipeline/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/core-game/: design.md  gap-analysis.md  requirements.md  research.md  spec.json  tasks.md
.kiro/steering/: product.md  structure.md  tech.md  testing.md
docs/: 1password_guide.md  QUICKSTART.md
examples/: gcs_example.py  ontology_example.py
ontology/: conestoga.ttl
scripts/: ingest_teams_link.py  map_preview.py  test-post.sh  test-pre.sh
src/conestoga/: __init__.py  main.py
src/conestoga/beast/: __init__.py  adapter.py  envelope.py  grafana_dashboard.json  observability.py  semantics.py
src/conestoga/game/: __init__.py  audit.py  events.py  fallback_monitor.py  gemini_gateway.py  runner.py  state.py  ui.py  validators.py
src/conestoga/hacp/: __init__.py  interceptor.py
src/conestoga/models/: events.py
src/conestoga/services/: gemini_event_service.py
src/conestoga/teams_link_ingestion/: __init__.py  content_fetcher.py  oauth_flow.py  ontology_creator.py  token_storage.py
tests/: test_audit.py  test_beast_adapter.py  test_beast_envelope.py  test_beast_observability.py  test_beast_semantics.py  test_game.py  test_gemini_event_service.py  test_map_image.py  test_ontology.py  test_ui_headless.py
